// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio component The Rendered HTML should have a label 1`] = `
<div
  class="rfe-form__row"
>
  <label
    for="id-1-1"
  >
    My Checkbox Label
  </label>
  <input
    id="id-1-1"
    type="radio"
    value="myradio"
  />
</div>
`;

exports[`Radio component handling input should set a value when passed in 1`] = `
<div
  class="rfe-form__row"
>
  <label
    for="id-2-1"
  >
    My Label
  </label>
  <input
    checked=""
    id="id-2-1"
    type="radio"
    value="myradio"
  />
</div>
`;

exports[`Radio component handling input should update a value when changed in 1`] = `
<div
  class="rfe-form__row"
>
  <label
    for="id-3-1"
  >
    My Label
  </label>
  <input
    id="id-3-1"
    type="radio"
    value="myradio"
  />
</div>
`;
